hphp/hack/test/typecheck/is_expression/merge_is_bad.php.like_types.exp
File "merge_is_bad.php", line 27, characters 11-12:
Invalid argument (Typing[4110])
File "merge_is_bad.php", line 19, characters 18-18:
Expected J
File "merge_is_bad.php", line 15, characters 25-25:
But got dynamic because it is an unenforceable type
